--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.10.2",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
+    "web-push": "^3.6.7",
     "ws": "^8.18.1"
   }
 }
